# fs-chaot

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  flake.nix  fly.toml  pixi.toml  pokemon_name_overrides.json  shell.nix  taplo.toml
.github/workflows/: fly-deploy.yml  lint-and-test.yml  lint.yml  test-and-lint.yml
assets/: main.css  style.css
db/: cards.db
db_seed/: expansions.sql
src/: backend.rs  card.rs  components.rs  csv_record.rs  expansion.rs  logging.rs  main.rs  pokeapi.rs  utils.rs
src/components/: book_navigation.rs  card_container.rs  card_ownership_dialog.rs  card_view.rs  card_view_compact.rs  collection.rs  dialog.rs  history.rs  home.rs  input.rs  login.rs  nav_bar.rs  placeholder_card.rs  protected_route.rs  search_bar.rs  search_view.rs
src/components/statistics/: mod.rs  statistics_dashboard.rs  statistics_view.rs  widget_container.rs
src/components/statistics/charts/: bar_chart.rs  chart_renderer.rs  mod.rs  scalar_display.rs
src/statistics/: mod.rs  models.rs  traits.rs
src/statistics/widgets/: expansion_completion_widget.rs  mod.rs  total_owned_widget.rs
