[package]
name = "fs-chaot"
version = "0.1.0"
authors = ["robotnik-dev <robotnik.games@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["fullstack", "router"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
serde_json = "1.0.145"
csv = "1.4.0"
itertools = "0.14.0"
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
